bencher/run_logs/revcomp.3.python.log

Wed, 11 Feb 2015 21:17:13 GMT

COMMAND LINE:
/usr/bin/python2 revcomp.python-3.python 0 < revcomp-input1000.txt

PROGRAM FAILED 


PROGRAM OUTPUT:

  File "revcomp.python-3.python", line 25
    print(line, end='')
                   ^
SyntaxError: invalid syntax
